--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "ngx-quill": "^27.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.7",
     "rxjs": "~7.8.0",
