--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,9 @@
     "@angular-devkit/build-angular": "^19.1.8",
     "@angular/cli": "^19.1.8",
     "@angular/compiler-cli": "^19.1.0",
+    "@fortawesome/angular-fontawesome": "^1.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@tailwindcss/forms": "^0.5.7",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.17",
