--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
@@ -44,7 +45,6 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "~5.7.2",
-    "vite": "^6.1.1"
+    "typescript": "~5.7.2"
   }
 }
