--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -88,8 +88,12 @@
           },
           "defaultConfiguration": "production"
         },
+        
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "allowedHosts": ["neurocorengine.com", ".neurocorengine.com"]
+          },
           "configurations": {
             "production": {
               "buildTarget": "frontend:build:production"
@@ -97,8 +101,7 @@
             "development": {
               "buildTarget": "frontend:build:development"
             }
-          },
-          "defaultConfiguration": "development"
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
