--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -88,12 +88,8 @@
           },
           "defaultConfiguration": "production"
         },
-        
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "allowedHosts": ["neurocorengine.com", ".neurocorengine.com"]
-          },
           "configurations": {
             "production": {
               "buildTarget": "frontend:build:production"
@@ -101,7 +97,8 @@
             "development": {
               "buildTarget": "frontend:build:development"
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
