--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 API_HOST=0.0.0.0
 API_PORT=8000
-API_URL=http://localhost:8000
+API_URL=https://api.neurocorengine.com
 DATABASE_URL=sqlite:///./sql_app.db
 CORS_ORIGINS=["http://localhost:4200"] 
